replace relative links with hardlinks, docusaurus limitation

--- a/blog/2019-10-25-beta-deploy.mdx
+++ b/blog/2019-10-25-beta-deploy.mdx
@@ -4,9 +4,9 @@ title: Blockchain Beta Deploy
 date: 2019-10-25
 ---
 
-The [last beta deploy](2019-20-23-beta-deploy) did not go well. Parsing of LongFi packets was broken
-in concentrate so the selected hotspots were not able to engage in Proof of Coverage with each other
-as planned.
+The [last beta deploy](https://docs.helium.com/blog/2019/20/23/beta-deploy) did not go well. Parsing
+of LongFi packets was broken in concentrate so the selected hotspots were not able to engage in
+Proof of Coverage with each other as planned.
 
 <!--truncate-->
 
