--- a/blog/2019-10-28-beta-deploy.mdx
+++ b/blog/2019-10-28-beta-deploy.mdx
@@ -4,9 +4,10 @@ title: Beta Deploy
 date: 2019-10-28
 ---
 
-On October 25 around 6 PM PDT we rolled out a [GA release](2019-20-25-beta-deploy-2) to address
-blockchain syncing problems. This was a network-wide change that intentionally broke compatibility
-with the previous 1.0 version of the blockchain sync protocol.
+On October 25 around 6 PM PDT we rolled out a
+[GA release](https://docs.helium.com/blog/2019/20/25/beta-deploy-2) to address blockchain syncing
+problems. This was a network-wide change that intentionally broke compatibility with the previous
+1.0 version of the blockchain sync protocol.
 
 <!--truncate-->
 
