--- a/blog/2019-12-18-core-hotfix.mdx
+++ b/blog/2019-12-18-core-hotfix.mdx
@@ -4,9 +4,10 @@ title: Blockchain H3 Crash Hotfix
 date: 2019-12-18 09:52 -0800
 ---
 
-The [PoC v5 update](https://engineering.helium.com/2019/12/17/poc-v5.html) exposed a few edge cases
-in [blockchain-core](https://github.com/helium/blockchain-core) related to Uber's
-[H3](https://github.com/uber/h3) library. The `grid_distance` function in H3 can crash in the
+The
+[PoC v5 update](https://engineering.helium.comhttps://docs.helium.com/blog/2019/12/17/poc-v5.html)
+exposed a few edge cases in [blockchain-core](https://github.com/helium/blockchain-core) related to
+Uber's [H3](https://github.com/uber/h3) library. The `grid_distance` function in H3 can crash in the
 following scenarios:
 
 <!--truncate-->
