--- a/blog/2020-04-10-console-updates.mdx
+++ b/blog/2020-04-10-console-updates.mdx
@@ -9,7 +9,7 @@ date: 2020-04-10
 - AWS IoT downlink completed, more details about documentation
   [here](https://developer.helium.com/console/integrations/awsiotcore).
 - This week pushed out backend updates: see previous blog
-  [here](https://engineering.helium.com/2020/04/03/console-backend-ui-updates.html).
+  [here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/04/03/console-backend-ui-updates.html).
 - Dedudped data sent from Helium Hotspots.
 
 <!--truncate-->
