--- a/blog/2020-04-17-console-debugmode.mdx
+++ b/blog/2020-04-17-console-debugmode.mdx
@@ -7,7 +7,7 @@ date: 2020-04-17
 ### Key feature updates
 
 - We’re releasing Debug mode Monday April 20 as we described last
-  [week](https://engineering.helium.com/2020/04/10/console-updates.html).
+  [week](https://engineering.helium.comhttps://docs.helium.com/blog/2020/04/10/console-updates.html).
 - Users can access Debug mode on a specific device or label page. This allows users to view data
   from a single or multiple devices.
 - Debug mode will display 10 packets at a time.
