--- a/blog/2020-04-28-hbbft-speed.mdx
+++ b/blog/2020-04-28-hbbft-speed.mdx
@@ -6,8 +6,9 @@ date: 2020-04-28 14:00 -0700
 
 ### Block Weather
 
-[Recently](https://engineering.helium.com/2020/04/23/collapse.html), we mentioned that we had some
-pending speedups to our HBBFT implementation. This image releases them to the cluster.
+[Recently](https://engineering.helium.comhttps://docs.helium.com/blog/2020/04/23/collapse.html), we
+mentioned that we had some pending speedups to our HBBFT implementation. This image releases them to
+the cluster.
 
 <!--truncate-->
 
