--- a/blog/2020-05-07-console-decoder.mdx
+++ b/blog/2020-05-07-console-decoder.mdx
@@ -48,4 +48,4 @@ hour. During this time Console will be inaccessible.
 ### Impact of planned update
 
 Details about the switch from subband 7 and other network updates including the impact can be found
-[here](https://engineering.helium.com/2020/05/05/lorawan-network-upgrade-potential-disruption-mitigation.html).
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/05/05/lorawan-network-upgrade-potential-disruption-mitigation.html).
