--- a/blog/2020-05-14-console-auth0.mdx
+++ b/blog/2020-05-14-console-auth0.mdx
@@ -26,7 +26,7 @@ A number of backend network updates including the switch from sub-band 7 to 2 wa
 week.
 
 Technical details about the upgrade and potential impact can be found
-[here](https://engineering.helium.com/2020/05/05/lorawan-network-upgrade-potential-disruption-mitigation.html)
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/05/05/lorawan-network-upgrade-potential-disruption-mitigation.html)
 
 ### Better user engagement
 
