--- a/blog/2020-10-31-emergency-release-additional-rak-hotspot-fix.mdx
+++ b/blog/2020-10-31-emergency-release-additional-rak-hotspot-fix.mdx
@@ -21,8 +21,8 @@ next week.
 
 Be advised that there's still a possibility that the RAK Hotspot Miners may fail to update to the
 new release `2020.10.31.1` for the same boot pin misconfiguration as described in the
-[prior post](https://engineering.helium.com/2020/10/31/emergency-release-rak-hotspot-fix.html) and
-may require an power cycle after 30 minutes of operating with the new firmware.
+[prior post](https://engineering.helium.comhttps://docs.helium.com/blog/2020/10/31/emergency-release-rak-hotspot-fix.html)
+and may require an power cycle after 30 minutes of operating with the new firmware.
 
 ### Plan
 
