--- a/blog/2020-11-11-blockchain-release-rak-hotspot-miner-ota-fix.mdx
+++ b/blog/2020-11-11-blockchain-release-rak-hotspot-miner-ota-fix.mdx
@@ -10,8 +10,8 @@ where RAK Hotspot Miners would not properly update to new firmware OTAs.
 <!--truncate-->
 
 We have described the issue in depth
-[here](https://engineering.helium.com/2020/11/06/blockchain-release-rak-miner-updates.html), this
-release aims to fix that. RAK Hotspot Miner owners will now be able to seamlessly update to new
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/11/06/blockchain-release-rak-miner-updates.html),
+this release aims to fix that. RAK Hotspot Miner owners will now be able to seamlessly update to new
 firmwares as they come along.
 
 Furthermore, we have updated the snapshot block to `583201` to allow newly onboarded hotspots to
