--- a/blog/2020-12-02-helium-api-update-removing-the-score.mdx
+++ b/blog/2020-12-02-helium-api-update-removing-the-score.mdx
@@ -7,7 +7,7 @@ date: 2020-12-02 15:57 -0800
 With the release of
 [HIP 16](https://github.com/helium/HIP/blob/master/0016-random-consensus-group-election.md) and
 implementation of
-[Random Consensus Group selection](https://engineering.helium.com/2020/11/18/blockchain-release-feature-updates.html),
+[Random Consensus Group selection](https://engineering.helium.comhttps://docs.helium.com/blog/2020/11/18/blockchain-release-feature-updates.html),
 the PoC-based Hotspot Score is no longer a metric that's used by the Helium blockchain. We intend to
 completely remove the `score` field from the
 [API response](https://developer.helium.com/blockchain/api/api-hotspots#hotspot-for-address).
