--- a/blog/2020-12-09-blockchain-release-hip-17/index.mdx
+++ b/blog/2020-12-09-blockchain-release-hip-17/index.mdx
@@ -8,8 +8,9 @@ The `2020.12.15.2` release was a monumental release adding support for
 [HIP17](https://github.com/helium/HIP/blob/master/0017-hex-density-based-transmit-reward-scaling.md).
 **Note that we have decided to scrap the `2020.12.09.0`, `2020.12.11.0`, and `2020.12.15.1` releases
 because of bugs we identified during ongoing testing. Details about those bug fixes can be found
-[here](https://engineering.helium.com/2020/12/14/blockchain-release-hip-17-bugfixes.html) and
-[here](https://engineering.helium.com/2020/12/15/blockchain-release-hip-17-additional-bugfixes.html).**
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/12/14/blockchain-release-hip-17-bugfixes.html)
+and
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/12/15/blockchain-release-hip-17-additional-bugfixes.html).**
 
 <!--truncate-->
 
