--- a/blog/2021-03-17-rak-firmware-issue-2.mdx
+++ b/blog/2021-03-17-rak-firmware-issue-2.mdx
@@ -9,7 +9,7 @@ date: 2021-03-17
 We have discovered an issue, this week, that affects a number of RAK Hotspot Miners shipped by
 Cal-Chip to customers starting January 2021 until today (the "Dolphin" batch, up to order #2999).
 This issue is the
-[same as November’s discovery](https://engineering.helium.com/2020/11/06/blockchain-release-rak-miner-updates.html).
+[same as November’s discovery](https://engineering.helium.comhttps://docs.helium.com/blog/2020/11/06/blockchain-release-rak-miner-updates.html).
 
 <!--truncate-->
 
