--- a/blog/2021-04-06-api-retrospective/index.mdx
+++ b/blog/2021-04-06-api-retrospective/index.mdx
@@ -6,11 +6,11 @@ date: 2021-04-06 14:26 -0700
 
 ## April 4-6 API Outage Retrospective
 
-Starting on April 4, our daily active users (DAU) on [Helium Explorer](explorer.helium.com) doubled
-from 15,000 to 30,000. As a result, the API services that Explorer relies on was unable to handle
-the additional load. The reason for this cannot be fully attributed to DAU, but rather a symptom of
-the root cause. This API is used by multiple services including the Explorer, Helium App, and Wallet
-CLI. Many third party services also depend on this API.
+Starting on April 4, our daily active users (DAU) on [Helium Explorer](https://explorer.helium.com)
+doubled from 15,000 to 30,000. As a result, the API services that Explorer relies on was unable to
+handle the additional load. The reason for this cannot be fully attributed to DAU, but rather a
+symptom of the root cause. This API is used by multiple services including the Explorer, Helium App,
+and Wallet CLI. Many third party services also depend on this API.
 
 <!--truncate-->
 
@@ -51,4 +51,4 @@ reported. This update is available in 3.0.6.
 ![banner](./banner.png)
 
 We’ve created a twitter bot [@helium_status](https://twitter.com/helium_status) to automatically
-tweet incidents and updates from our [status page](status.helium.com).
+tweet incidents and updates from our [status page](https://status.helium.com).
