--- a/blog/2021-05-19-blockchain-release-snapshot-update-and-low-space-fix.mdx
+++ b/blog/2021-05-19-blockchain-release-snapshot-update-and-low-space-fix.mdx
@@ -13,7 +13,7 @@ all miners and will be automatic for all Hotspots using the Helium firmware when
 ### [miner#781](https://github.com/helium/miner/pull/781): Update snapshot to 851041
 
 After
-[yesterday's](https://engineering.helium.com/2021/05/18/blockchain-release-fixing-oom-and-sync.html)
+[yesterday's](https://engineering.helium.comhttps://docs.helium.com/blog/2021/05/18/blockchain-release-fixing-oom-and-sync.html)
 stability fix release the chain was successfully able to mint a new, complete snapshot `851041`. The
 team has updated miner config to switch to the newer blessed snapshot for newly onboarded Hotspots
 to sync faster.
