--- a/blog/2021-05-30-blockchain-release-tuning-slow-txns.mdx
+++ b/blog/2021-05-30-blockchain-release-tuning-slow-txns.mdx
@@ -18,7 +18,7 @@ a successful election more likely.
 ### [miner#798](https://github.com/helium/miner/pull/798): Give more time to consensus groups and less to poc receipts
 
 After
-[yesterday's](https://engineering.helium.com/2021/05/29/blockchain-release-chain-halt-postmortem.html)
+[yesterday's](https://engineering.helium.comhttps://docs.helium.com/blog/2021/05/29/blockchain-release-chain-halt-postmortem.html)
 emergency release to fix blockchain halt, the core developers noticed that election transactions
 were not getting enough time for validation and absorption, this PR updates the timeouts to help
 clear longer election transactions.
