--- a/blog/2021-06-02-console-updates-1.9.52.mdx
+++ b/blog/2021-06-02-console-updates-1.9.52.mdx
@@ -11,7 +11,7 @@ and decoded text.
 
 In addition, the team updated the backend (Router) with the latest major blockchain core release,
 more details
-[here](https://engineering.helium.com/2021/05/28/major-blockchain-release-validator-support.html).
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2021/05/28/major-blockchain-release-validator-support.html).
 
 ### Features and updates
 
