--- a/blog/2021-07-14-blockchain-release-more-snapshot-fixes.mdx
+++ b/blog/2021-07-14-blockchain-release-more-snapshot-fixes.mdx
@@ -11,8 +11,8 @@ continue syncing with newly blessed snapshots.
 <!--truncate-->
 
 This release improves on the
-[previous](https://engineering.helium.com/2021/07/13/blockchain-release-snapshot-fixes.html) release
-and fixes some critical issues related to light gateway support, snapshot disagreement and
+[previous](https://engineering.helium.comhttps://docs.helium.com/blog/2021/07/13/blockchain-release-snapshot-fixes.html)
+release and fixes some critical issues related to light gateway support, snapshot disagreement and
 non-invalidation (follow) mode. As many community members have noticed, there hasn't been a blessed
 snapshot on the blockchain for a while, the core developers believe that the fixes in this new
 release will further improve chances of getting a snapshot on chain.
