--- a/blog/2021-07-15-console-updates-1.9.55.mdx
+++ b/blog/2021-07-15-console-updates-1.9.55.mdx
@@ -16,7 +16,7 @@ made to address these issues as well as upcoming fixes.
 
 Hotspot syncing - an issue causing earlier versions of Hotspots to continually sync, which could
 have impacted packet delivery was fixed
-[blog](https://engineering.helium.com/2021/07/11/blockchain-release-snapshot-performance-update.html)
+[blog](https://engineering.helium.comhttps://docs.helium.com/blog/2021/07/11/blockchain-release-snapshot-performance-update.html)
 
 State channels - increased the maximum number of open state channels to 10 (from 5) which helps
 Console backend (Router) serve more packets as the demand on using the network continues to
