--- a/blog/2021-11-01-console-postmortem.mdx
+++ b/blog/2021-11-01-console-postmortem.mdx
@@ -14,15 +14,16 @@ perpetual join accept and requests, and impacted downlinks.
 
 More details:
 
-- [Blog](https://engineering.helium.com/2021/10/27/blockchain-release-auto-snaps-and-bug-fixes.html)
+- [Blog](https://engineering.helium.comhttps://docs.helium.com/blog/2021/10/27/blockchain-release-auto-snaps-and-bug-fixes.html)
 - [PR](https://github.com/helium/miner/pull/1136)
 
 This issue only affected devices attempting joins or downlinks. Devices sending uplinks were not
 affected.
 
 An emergency update `2021.10.29.0` was pushed on 10/29 afternoon to miners/hotspots to fix the
-issue. Read [blog](https://engineering.helium.com/2021/10/29/miner-emergency-release.html) for more
-information.
+issue. Read
+[blog](https://engineering.helium.comhttps://docs.helium.com/blog/2021/10/29/miner-emergency-release.html)
+for more information.
 
 ## Next Steps
 
