--- a/blog/2019-10-21-beta-deploy.mdx
+++ b/blog/2019-10-21-beta-deploy.mdx
@@ -4,9 +4,9 @@ title: Blockchain Beta Deploy
 date: 2019-10-22 08:56 -0700
 ---
 
-We rolled out the [Beta update]({% post_url 2019-10-18-beta-deploy%}) over the weekend and it
-appears to have helped some, but a number of issues were discovered that caused unneeded network
-load, slowing down blocks and elections.
+We rolled out the [Beta update](https://docs.helium.com/blog/2019/10/10/beta-deploy) over the
+weekend and it appears to have helped some, but a number of issues were discovered that caused
+unneeded network load, slowing down blocks and elections.
 
 <!--truncate-->
 
