--- a/blog/2019-12-11-performance-patch.mdx
+++ b/blog/2019-12-11-performance-patch.mdx
@@ -10,7 +10,7 @@ On December 11 around 3 PM PDT we rolled out a new beta release.
 
 ## Block Weather
 
-While our [PoCv4](https://engineering.helium.com/2019/12/02/poc-v4.html) changes have improved the
+While our [PoCv4](https://docs.helium.com/blog/2019/12/02/poc-v4) changes have improved the
 performance of the chain somewhat, we're still regularly missing our 60 block production target,
 with an average block production time of 76s at the time of this writing. We've also seen increasing
 problems with block sync as the increased performance of receipts has roughly tripled the average
