--- a/blog/2020-05-09-packet-routing.mdx
+++ b/blog/2020-05-09-packet-routing.mdx
@@ -7,7 +7,7 @@ date: 2020-05-08 14:00 -0700
 This release lands a bunch of work (7000+ lines of code) to enable proper packet routing using the
 ledger information. This work also lays the groundwork for paying for packets with data credits. You
 can read more details in the earlier blog post
-[here](https://engineering.helium.com/2020/05/05/lorawan-network-upgrade-potential-disruption-mitigation.html).
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/05/05/lorawan-network-upgrade-potential-disruption-mitigation.html).
 
 <!--truncate-->
 
