--- a/blog/2020-12-16-chain-variable-update-max-witnesses.mdx
+++ b/blog/2020-12-16-chain-variable-update-max-witnesses.mdx
@@ -21,9 +21,10 @@ case scenario). In the beacon-only model, since there's only a single challengee
 would transmit a PoC packet, we are increasing the witness limit from 5 to 25.
 
 You can read more about the deployment progress of HIPs 15 and 17 in our previous blog posts
-[here](https://engineering.helium.com/2020/12/09/blockchain-release-hip-17.html),
-[here](https://engineering.helium.com/2020/12/14/blockchain-release-hip-17-bugfixes.html) and
-[here](https://engineering.helium.com/2020/12/15/blockchain-release-hip-17-additional-bugfixes.html).
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/12/09/blockchain-release-hip-17.html),
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/12/14/blockchain-release-hip-17-bugfixes.html)
+and
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/12/15/blockchain-release-hip-17-additional-bugfixes.html).
 
 #### Proposed Chain Variable
 
