--- a/blog/2021-05-19-console-updates-1.9.51.mdx
+++ b/blog/2021-05-19-console-updates-1.9.51.mdx
@@ -6,7 +6,8 @@ date: 2021-05-20 14:00 -0700
 
 The team delivered the ability to view LoRaWAN MAC command information for downlinks. Also along
 with other updates backend work was done to enable Discovery Mode for Hotspots. See details about
-Discovery Mode [here](https://engineering.helium.com/2021/05/18/app-version-320.html).
+Discovery Mode
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2021/05/18/app-version-320.html).
 
 <!--truncate-->
 
