leading whitespace on headers

--- a/devblog/2019-10-29-app-releases-to-date.mdx
+++ b/devblog/2019-10-29-app-releases-to-date.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518, evanmcc]
 ---
 
+&nbsp;
+
 # iOS Version 1.4.6/Android Version 1.4.6
 
 - Fixed an unrecoverable bug when you enter irrelevant information in custom endpoints
