--- a/devblog/2019-10-31-android-update.mdx
+++ b/devblog/2019-10-31-android-update.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Android Version 1.4.6.1
 
 - Our previous update for Android 1.4.6 had a bug for one of our require libraries and caused X86
