--- a/devblog/2020-06-25-app-version-190.mdx
+++ b/devblog/2020-06-25-app-version-190.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Summary
 
 PLEASE UPDATE TO THIS RELEASE. This update includes the following new features and is not backwards
