--- a/devblog/2020-08-04-app-version-211.mdx
+++ b/devblog/2020-08-04-app-version-211.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Bug Fixes
 
 This release is to prep for the new Hotspots coming online, plus a few bug fixes.
