--- a/devblog/2020-08-14-app-version-213.mdx
+++ b/devblog/2020-08-14-app-version-213.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Bug Fixes
 
 This release fixes the websockets used on the main Accounts page (it was using the old API, now uses
