--- a/devblog/2020-11-23-app-version-270.mdx
+++ b/devblog/2020-11-23-app-version-270.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Performance Fixes
 
 - Migrate legacy secure store data in preparation for new app version (v3). We recommend all users
