--- a/devblog/2020-12-15-app-version-280.mdx
+++ b/devblog/2020-12-15-app-version-280.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Transfer Hotspot
 
 As approved by HIP13, the engineering team has finished the implementation of Transfer Hotspot,
