--- a/devblog/2021-02-24-app-version-300.mdx
+++ b/devblog/2021-02-24-app-version-300.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # 3.0.0 A Brand New App!
 
 After months of waiting, we’re so happy to announce the new version of the Helium Hotspot app is
