--- a/devblog/2021-03-17-rak-firmware-issue-2.mdx
+++ b/devblog/2021-03-17-rak-firmware-issue-2.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518, madninja]
 ---
 
+&nbsp;
+
 # RAK Hotspot Miner Firmware Issue
 
 We have discovered an issue, this week, that affects a number of RAK Hotspot Miners shipped by
