--- a/devblog/2021-03-23-app-version-303.mdx
+++ b/devblog/2021-03-23-app-version-303.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # 3.0.3 Improvements
 
 Show which Maker paid for the Add Hotspot and Assert Location transaction
