--- a/devblog/2021-05-18-app-version-320.mdx
+++ b/devblog/2021-05-18-app-version-320.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Discovery Mode is Here!
 
 Use Discovery Mode to understand your Hotspot’s coverage without waiting for
