--- a/devblog/2021-10-18-app-post-mortem.mdx
+++ b/devblog/2021-10-18-app-post-mortem.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # App Outage Post Mortem
 
 This post-mortem describes the events leading up to the app outage on October 17, what happened, and
