--- a/devblog/2021-11-18-app-version-383.mdx
+++ b/devblog/2021-11-18-app-version-383.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # App Version 3.8.3
 
 This release includes improvements to API loading, adds rewards caching, and updates how earnings
