--- a/devblog/2021-11-30-network-outage-post-mortem.mdx
+++ b/devblog/2021-11-30-network-outage-post-mortem.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518, madninja, abhay]
 ---
 
+&nbsp;
+
 # Overview
 
 Last week the Helium Network experienced several disruptions. Throughout the disruptions, there was
