--- a/devblog/2021-12-01-app-version-384.mdx
+++ b/devblog/2021-12-01-app-version-384.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Improvements
 
 Updates Hotspot Earnings chart to show UTC days (7D, 14D, 30D).
