--- a/devblog/2021-12-27-app-version-386.mdx
+++ b/devblog/2021-12-27-app-version-386.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # New Features
 
 See how your Hotspot stacks up to the Network! We’ve added the average expected network earnings per
