--- a/devblog/2022-02-11-network-disurption-post-mortem.mdx
+++ b/devblog/2022-02-11-network-disurption-post-mortem.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [jdgemm]
 ---
 
+&nbsp;
+
 # What happened
 
 On Monday 2022-02-07 5:46 AM UTC the team announced a chain halt caused by enlarged block 121528.
