--- a/devblog/2022-05-12-app-version-402.mdx
+++ b/devblog/2022-05-12-app-version-402.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Bug Fixes
 
 This update is to fix a few bugs found since the last release. The next release will address changes
