--- a/devblog/2022-05-17-app-version-410.mdx
+++ b/devblog/2022-05-17-app-version-410.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Light Hotspot Support
 
 This update adds Light Hotspot support to the app, specifically for Transferring Hotspots and
