--- a/devblog/2022-06-10-miner-hotspot-release.mdx
+++ b/devblog/2022-06-10-miner-hotspot-release.mdx
@@ -12,6 +12,8 @@ fixes a crash in ebus (more on this below), and a "flatline" fix (more on this b
 
 <!--truncate-->
 
+&nbsp;
+
 # Enabling Mux
 
 - Makers must enable mux explicitly in their docker overlay by adding
