--- a/devblog/2022-07-11-network-disurption-post-mortem.mdx
+++ b/devblog/2022-07-11-network-disurption-post-mortem.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [jdgemm]
 ---
 
+&nbsp;
+
 # What happened
 
 On Monday 2022-07-11 at approximately 12:42 PM UTC the Consensus Group stopped producing blocks at
