--- a/devblog/2022-07-14-miner-hotspot-release.mdx
+++ b/devblog/2022-07-14-miner-hotspot-release.mdx
@@ -20,6 +20,8 @@ for their Hotspot fleets. See directions below on how to enable mux and turn off
 Hotspots can expect to make 3 connections to a Validator when mux is enabled (one for PoC, one for
 packets, and one for activity).
 
+&nbsp;
+
 # Enabling Mux
 
 - Makers must enable mux explicitly in their docker overlay by adding
