--- a/devblog/2022-08-15-network-disurption-post-mortem.mdx
+++ b/devblog/2022-08-15-network-disurption-post-mortem.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [jdgemm]
 ---
 
+&nbsp;
+
 # What happened
 
 On Monday 2022-08-08 at approximately 19:34 PM UTC Validators stopped producing blocks at block
