--- a/devblog/2022-11-21-network-disruption-post-mortem.mdx
+++ b/devblog/2022-11-21-network-disruption-post-mortem.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [jdgemm]
 ---
 
+&nbsp;
+
 # What happened
 
 On Wednesday, 2022-11-16, at approximately 22:06 UTC, Validators stopped producing blocks at block
