--- a/devblog/2022-12-19-wallet-version-1-5-0.mdx
+++ b/devblog/2022-12-19-wallet-version-1-5-0.mdx
@@ -28,6 +28,8 @@ Adds support for incoming Wallets from Helium Hotspot App (blue app)
 - fixes Wallet Connect to improve Crowdspot experience
 - fixes Android Ledger Scan
 
+&nbsp;
+
 # Helium Hotspot 4.3.0
 
 The Helium blockchain migration to Solana is almost here! Prepare for the update by migrating your
