--- a/devblog/2021-05-12-app-version-313.mdx
+++ b/devblog/2021-05-12-app-version-313.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # 3.1.3 Improvements and Bug Fixes
 
 ## Added Relayed Hotspot pill
