--- a/devblog/2022-10-20-network-disruption-post-mortem.mdx
+++ b/devblog/2022-10-20-network-disruption-post-mortem.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [jdgemm]
 ---
 
+&nbsp;
+
 # What happened
 
 On Wednesday 2022-10-19 at approximately 2:20 AM UTC Validators stopped producing blocks at block
