--- a/devblog/2021-03-19-maker-update-march/index.mdx
+++ b/devblog/2021-03-19-maker-update-march/index.mdx
@@ -3,6 +3,7 @@ layout: post
 title: Maker Progress Update
 date: 2021-03-19
 hide_table_of_contents: true
+authors: [cokes518]
 ---
 
 ## Maker Update
