--- a/devblog/2021-04-06-api-retrospective/index.mdx
+++ b/devblog/2021-04-06-api-retrospective/index.mdx
@@ -3,6 +3,7 @@ layout: post
 title: 'API Outage Retrospective'
 date: 2021-04-06 14:26 -0700
 hide_table_of_contents: true
+authors: [cokes518]
 ---
 
 ## April 4-6 API Outage Retrospective
