--- a/devblog/2021-09-07-app-version-350/index.mdx
+++ b/devblog/2021-09-07-app-version-350/index.mdx
@@ -3,6 +3,7 @@ layout: post
 title: App Version 3.5.0
 date: 2021-09-07
 hide_table_of_contents: true
+authors: [cokes518]
 ---
 
 App Version 3.5.0
