--- a/devblog/2020-12-09-blockchain-release-hip-17/index.mdx
+++ b/devblog/2020-12-09-blockchain-release-hip-17/index.mdx
@@ -3,6 +3,7 @@ layout: post
 title: 'Blockchain Release: HIP 17'
 date: 2020-12-09 17:16 -0800
 hide_table_of_contents: true
+authors: [jdgemm]
 ---
 
 The `2020.12.15.2` release was a monumental release adding support for
