--- a/devblog/2021-01-26-maker-audit/index.mdx
+++ b/devblog/2021-01-26-maker-audit/index.mdx
@@ -3,6 +3,7 @@ layout: post
 title: Auditing Makers for the Decentralized Wireless Alliance
 date: 2021-01-26
 hide_table_of_contents: true
+authors: [cokes518]
 ---
 
 # The Maker Audit
