--- a/devblog/2021-01-28-hotspot-firmware-power-updates/index.mdx
+++ b/devblog/2021-01-28-hotspot-firmware-power-updates/index.mdx
@@ -3,6 +3,7 @@ layout: post
 title: 'Hotspot Firmware Power Updates'
 date: 2021-01-27 12:32 -0800
 hide_table_of_contents: true
+authors: [cokes518, vihu]
 ---
 
 The team has a new release tagged `2021.01.27.0` containing a change to the Radio Power Output,
