--- a/devblog/2021-02-16-maker-update/index.mdx
+++ b/devblog/2021-02-16-maker-update/index.mdx
@@ -3,6 +3,7 @@ layout: post
 title: Maker Progress Update
 date: 2021-02-16
 hide_table_of_contents: true
+authors: [cokes518]
 ---
 
 ## Maker Update
