--- a/devblog/2021-04-13-maker-update-april/index.mdx
+++ b/devblog/2021-04-13-maker-update-april/index.mdx
@@ -3,6 +3,7 @@ layout: post
 title: April Maker Update & A New Process
 date: 2021-04-13
 hide_table_of_contents: true
+authors: [cokes518]
 ---
 
 # Maker Update
