header whitespace padding

--- a/devblog/2021-02-16-maker-update/index.mdx
+++ b/devblog/2021-02-16-maker-update/index.mdx
@@ -27,6 +27,8 @@ A summary of how a Maker goes from HIP19-approved to market:
 To expand on Step 5, Makers will have to accomplish 4 additional milestones that is
 [documented here](https://docs.helium.com/mine-hnt/hotspot-makers):
 
+&nbsp;
+
 # Add a Test Hotspot using the Test Maker account
 
 This step is to verify that the Maker’s Hotspot is communicating with the Hotspot app over Bluetooth
