--- a/devblog/2021-04-13-maker-update-april/index.mdx
+++ b/devblog/2021-04-13-maker-update-april/index.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # Maker Update
 
 Here is the latest update from our Makers manufacturing Hotspots for the Helium Network.
