--- a/devblog/2021-01-26-maker-audit/index.mdx
+++ b/devblog/2021-01-26-maker-audit/index.mdx
@@ -6,6 +6,8 @@ hide_table_of_contents: true
 authors: [cokes518]
 ---
 
+&nbsp;
+
 # The Maker Audit
 
 The Helium community places a lot of trust in
