--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -11,21 +11,26 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::important Sunsetting Features
 
-Wallet-related functionality in the Helium Hotspot app will be sunsetted over the coming months.
-This functionality is moving to the new [Helium Wallet App](/wallets/helium-wallet-app)
+Wallet-related functionality in the Helium Hotspot app has been migrated to the new 
+[Helium Wallet App](/wallets/helium-wallet-app)
+
+Hotspot management of non Helium Branded Hotspots in the Helium Hotspot app has been migrated to the 
+vendors created apps at
+[Maker Apps](/maker-apps)
 
 :::
 
-The Helium Hotspot App focuses on people who want to send or receive HNT or manage Hotspots. Other
-activities, such as managing end-devices and OUIs (i.e. users of the network) are generally best
+The Helium Hotspot App previously focused on people who want to send or receive HNT or manage Hotspots. 
+other activities, such as managing end-devices and OUIs (i.e. users of the network) are generally best
 suited for the command line wallet.
 
-The Helium app (available for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
-[Android](https://play.google.com/store/apps/details?id=com.helium.wallet)) includes everything you
-need to on-board and maintain your Hotspot and view its activity. With the app, which also is your
-Helium wallet, you're able to do things like:
+It currently is specifically for managing Only Helium Branded hotspots.
 
-- Send and receive HNT and create Data Credits
+The Helium app (available for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
+[Android](https://play.google.com/store/apps/details?id=com.helium.wallet)) included everything you
+need to on-board and maintain your Hotspot and view its activity. With the app, which was also your
+Helium wallet, you were able to do things like:
+
 - Add your Hotspot to the network and set your location
 - Configure your Wi-Fi
 - View your Hotspot's activity
