fixup admonition tag and maker-app link

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -9,20 +9,19 @@ slug: /wallets/app-wallet
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-:::important Sunsetting Features
+:::warning Sunsetting Features
 
-Wallet-related functionality in the Helium Hotspot app has been migrated to the new 
+Wallet-related functionality in the Helium Hotspot app has been migrated to the new
 [Helium Wallet App](/wallets/helium-wallet-app)
 
-Hotspot management of non Helium Branded Hotspots in the Helium Hotspot app has been migrated to the 
-vendors created apps at
-[Maker Apps](/maker-apps)
+Hotspot management of non Helium Branded Hotspots in the Helium Hotspot app has been migrated to the
+vendors created apps at [Maker Apps](/mine-hnt/maker-apps)
 
 :::
 
-The Helium Hotspot App previously focused on people who want to send or receive HNT or manage Hotspots. 
-other activities, such as managing end-devices and OUIs (i.e. users of the network) are generally best
-suited for the command line wallet.
+The Helium Hotspot App previously focused on people who want to send or receive HNT or manage
+Hotspots. other activities, such as managing end-devices and OUIs (i.e. users of the network) are
+generally best suited for the command line wallet.
 
 It currently is specifically for managing Only Helium Branded hotspots.
 
