fixup for migrated devblog links
smidge outside scope, but easy to snag these while they pop up

--- a/devblog/2021-11-30-network-outage-post-mortem.mdx
+++ b/devblog/2021-11-30-network-outage-post-mortem.mdx
@@ -300,7 +300,7 @@ This is a shortlist of key fixes to prevent the recurrence of the events that ca
 outage.
 
 A complete list and specific details to address these events can be found on the
-[engineering blog](https://engineering.helium.com/).
+[engineering blog](https://docs.helium.com/devblog).
 
 - A few hours after the cause was identified the team quickly provided a fix to ensure the root
   cause prevented the issue caused by \* Router from recurring
