--- a/docs/blockchain/oracles/oracles.mdx
+++ b/docs/blockchain/oracles/oracles.mdx
@@ -13,7 +13,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 HNT converts to Data Credits at a rate pegged to `$.00001` , and so the blockchain requires a
 canonical HNT/$USD price for this conversion. Beginning in June 2020, the Helium blockchain
-[started using a system](https://engineering.helium.com/2020/05/29/HNT-Price-Oracles.html) of
+[started using a system](https://docs.helium.com/devblog/2020/05/29/HNT-Price-Oracles.html) of
 decentralized price oracles to supply the $USD to HNT price used for on-chain for burn transactions.
 (This system is inspired by
 [the Maker Foundation's Oracle usage.](https://blog.makerdao.com/introducing-oracles-v2-and-defi-feeds/))
