--- a/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
@@ -29,7 +29,7 @@ release passes, it will graduate to "General Availability" and be re-tagged with
 This triggers an automatic build of the Docker images which get pushed to Quay when complete.
 
 In addition, a "Blockchain Release" will typically be posted on
-[engineering.helium.com](https://engineering.helium.com/).
+[engineering.helium.com](https://docs.helium.com/devblog).
 
 As a blockchain is decentralized in its nature, we are careful not to do breaking changes that
 require immediate and synchronized updates of the Miner.
