--- a/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
@@ -13,7 +13,7 @@ With HIP19 in place, companies can submit an application to be reviewed by the c
 [Helium Foundation](https://www.helium.foundation).
 
 The full process for approving and auditing new manafacturers is as follows
-([originally outlined in this blog post](https://engineering.helium.com/2021/01/26/maker-audit.html)):
+([originally outlined in this blog post](https://docs.helium.com/devblog/2021/01/26/maker-audit.html)):
 
 1. Makers submit a HIP19 Proposal.
 2. Helium Foundation sends KYC/B request for documentation.
