--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -35,7 +35,7 @@ Helium wallet, you were able to do things like:
 - View your Hotspot's activity
 - See where other Hotspots are located
 
-[Check out the latest app release notes](https://engineering.helium.com/)
+[Check out the latest app release notes](https://docs.helium.com/devblog)
 
 ## Guides
 
